Added new page - party

--- a/main.html
+++ b/main.html
@@ -21,16 +21,17 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">ОЛЕКСАНДР ТА ЯНА</a></h1>
+						<h1><a href="main.html">ОЛЕКСАНДР ТА ЯНА</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Меню</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Головна</a></li>
-											<li><a href="generic.html">Історія кохання</a></li>
-											<li><a href="elements.html">Подарунки</a></li>
+											<li><a href="main.html">Головна</a></li>
+											<li><a href="loveStory.html">Історія кохання</a></li>
+											<li><a href="party.html">День весілля</a></li>
+											<li><a href="giftsList.html">Подарунки</a></li>
 										</ul>
 									</div>
 								</li>
@@ -186,7 +187,7 @@
 								<p>Ми дуже вдячні Богу за можливысть розділити з вами перший день нашого спільного життя.</p>
 							</header>
 							<ul class="actions vertical"> 
-								<li><a href="index.html" class="button fit">нагору</a></li>
+								<li><a href="main.html" class="button fit">нагору</a></li>
 							</ul>
 						</div>
 					</section>
