--- a/giftsList.html
+++ b/giftsList.html
@@ -44,7 +44,7 @@
 						<header>
 							<div class="inner">
 								<h2 class="headFont">Подарунки</h2>
-								<p>Тут ви можете знайти речі які нам справді потрібні.<br />Робити подарунки велика радість,<br />дарувати те що справді потрібно - мистецтво.</p>
+								<p>Тут ви можете знайти речі які нам справді<br />потрібні. Робити подарунки велика радість,<br />дарувати те що справді потрібно - мистецтво.</p>
 							</div>
 						</header>
 						<section class="wrapper style5">
@@ -105,13 +105,13 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="icons">
+						<!-- <ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
+						</ul> -->
 						<ul class="inner">
 							<p>&copy; Mr&ampMrsMarienko</p>
 						</ul>
