--- a/giftsList.html
+++ b/giftsList.html
@@ -112,7 +112,7 @@
 												<tr>
 													<td><a target="_blank" href="http://gurmaniac.kiev.ua/products/blok-dlya-nozhey-universalnyiy-zeller-chernyiy-11-18-sm-24917-18043">Блок для ножів ZELLER</a></td>
 													<td></td>
-													<td>590</td>
+													<td><font color="green">заброньовано</font></td>
 												</tr>
 												<tr>
 													<td><a target="_blank" href="http://hotline.ua/dom-skovorody/blaumann-bl-1232/">Сковорода ВОК Blaumann</a></td>
